# rest-client-zed

./: .gitignore  Cargo.toml  PLAN.md  README.md  extension.toml
.github/workflows/: ci.yml  lsp-release.yml
.zed/: tasks.json
crates/extension/: Cargo.toml
crates/extension/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: auth.rs  codegen.rs  curl.rs  environments.rs  executor.rs  formatter.rs  handler.rs  history.rs  main.rs  parser.rs  security.rs  variables.rs
examples/: sample.http
languages/http/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm  runnables.scm
scripts/: run-request.sh
