[package]
name = "rest-client-lsp"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rest-client-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
